# moneyhand

./: .coveragerc  .travis.yml  Dockerfile  README.md  TODO.md  docker-compose.yml  heroku.yml  pyproject.toml
conf/: .gitignore  config.env.template  db.env.template
conf/kube/: .gitignore  moneyhand_bot_deployment.yaml  postgres_db.yaml
moneyhand/: __main__.py  app.py  config.py
moneyhand/adapters/: orm.py  repository.py  sql_tables.py  unit_of_work.py
moneyhand/adapters/graph_render/: __init__.py
moneyhand/adapters/postgresql_storage/: alembic.ini  helpers.py  orm.py  repository.py  unit_of_work.py  unit_of_work_context.py
moneyhand/core/: entities.py  errors.py  repository.py  service.py  unit_of_work.py  validators.py
moneyhand/core/entities/: __init__.py  base.py  categories.py  income.py  report.py  spending_plan.py  tenants.py
moneyhand/core/service/: __init__.py  spending_plan.py  tenant.py
moneyhand/fixtures/: db.py  entities.py  memory_entities.py  pg_entities.py  repositories.py  service.py  unit_of_work.py  utils.py
moneyhand/interfaces/: rest.py
moneyhand/interfaces/cli/: __main__.py  renders.py
moneyhand/interfaces/rest/: __init__.py  schemas.py  security.py  service.py
moneyhand/interfaces/telegram/: __main__.py  app.py  auth.py  errors.py  (+5 more)
scripts/: cli.sh  run_telegram_bot.sh  test.sh
tests/: conftest.py  test_functional.py  test_service.py
tests/test_adapters_postgresql_storage/: test_categories_repo.py  test_income_repo.py  test_spending_plan_repo.py  test_tenants_repo.py
tests/test_interfaces/: test_rest_api.py
(+9 files in other folders)
