[tool.poetry]
name = "moneyhand"
version = "0.1.0"
description = "Moneyhand - To keep your finances in order."
authors = ["Nikita Kharlov <nikita@harlov.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "^0.21.0"
sqlalchemy = {git = "https://github.com/sqlalchemy/sqlalchemy"}
click = "^7.1.2"
alembic = "^1.4.3"
psycopg2 = "^2.8.6"
nest-asyncio = "^1.4.1"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-asyncio = "^0.14.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
